src/rdtl/parser.py
"""
Recursive descent parser for RDTL.

Converts token stream into an Abstract Syntax Tree (AST).

The Parser has been refactored into specialized parsers for improved
modularity and maintainability:
- ExpressionParser: Handles variable expressions and filters
- HtmlParser: Handles HTML elements and attributes
- TemplateParser: Handles Django template tags and control flow

The main Parser delegates to these specialized parsers while maintaining
the overall parsing orchestration.
"""

import re

from rdtl import ast_nodes
from rdtl.expression_parser import ExpressionParser
from rdtl.html_parser import HtmlParser
from rdtl.lexer import Lexer, Token, TokenType
from rdtl.template_parser import TemplateParser


class ParseError(Exception):
    """Raised when parsing fails."""

    pass


class Parser:
    """
    Recursive descent parser for RDTL.

    Follows the grammar defined in grammar.ebnf.
    """

    VOID_ELEMENTS = {
        "area",
        "base",
        "br",
        "col",
        "embed",
        "hr",
        "img",
        "input",
        "link",
        "meta",
        "param",
        "source",
        "track",
        "wbr",
    }

    # Known Django block tags
    KNOWN_BLOCK_TAGS = {
        "if",
        "for",
        "block",
        "with",
        "autoescape",
        "filter",
        "spaceless",
        "verbatim",
    }

    def __init__(self, tokens: list[Token], discovered_blocks: set | None = None):
        self.tokens = tokens
        self.pos = 0

        # Merge known and discovered block tags
        self.block_tags = self.KNOWN_BLOCK_TAGS.copy()
        if discovered_blocks:
            self.block_tags.update(discovered_blocks)

        # Initialize specialized parsers
        self.expression_parser = ExpressionParser(self)
        self.html_parser = HtmlParser(self)
        self.template_parser = TemplateParser(self, self.expression_parser)

    def current(self) -> Token:
        """Get current token."""
        if self.pos >= len(self.tokens):
            return self.tokens[-1]  # Return EOF
        return self.tokens[self.pos]

    def peek(self, offset: int = 1) -> Token:
        """Look ahead at token."""
        pos = self.pos + offset
        if pos >= len(self.tokens):
            return self.tokens[-1]  # Return EOF
        return self.tokens[pos]

    def advance(self) -> Token:
        """Consume and return current token."""
        token = self.current()
        if token.type != TokenType.EOF:
            self.pos += 1
        return token

    def expect(self, token_type: TokenType) -> Token:
        """Expect a specific token type and consume it."""
        token = self.current()
        if token.type != token_type:
            raise ParseError(
                f"Expected {token_type.name} but got {token.type.name} "
                f"at line {token.line}, column {token.column}"
            )
        return self.advance()

    def match(self, *token_types: TokenType) -> bool:
        """Check if current token matches any of the given types."""
        return self.current().type in token_types

    def is_identifier_like(self) -> bool:
        """Check if current token can be used as an identifier.

        In attribute lookups, Django allows keywords to be used as attribute names.
        For example: {{ obj.as }}, {{ obj.if }}, {{ obj.for }} are all valid.
        """
        token_type = self.current().type
        # IDENTIFIER is obviously allowed
        if token_type == TokenType.IDENTIFIER:
            return True
        # NUMBER is allowed for numeric indices
        if token_type == TokenType.NUMBER:
            return True
        # Keywords can be used as attribute names
        keyword_types = {
            TokenType.IF,
            TokenType.ELIF,
            TokenType.ELSE,
            TokenType.ENDIF,
            TokenType.FOR,
            TokenType.IN,
            TokenType.EMPTY,
            TokenType.ENDFOR,
            TokenType.BLOCK,
            TokenType.ENDBLOCK,
            TokenType.WITH,
            TokenType.ENDWITH,
            TokenType.INCLUDE,
            TokenType.EXTENDS,
            TokenType.LOAD,
            TokenType.CSRF_TOKEN,
            TokenType.AUTOESCAPE,
            TokenType.ENDAUTOESCAPE,
            TokenType.COMMENT,
            TokenType.ENDCOMMENT,
            TokenType.IFCHANGED,
            TokenType.ENDIFCHANGED,
            TokenType.FILTER,
            TokenType.ENDFILTER,
            TokenType.SPACELESS,
            TokenType.ENDSPACELESS,
            TokenType.VERBATIM,
            TokenType.ENDVERBATIM,
            TokenType.CYCLE,
            TokenType.RESETCYCLE,
            TokenType.DEBUG,
            TokenType.LOREM,
            TokenType.REGROUP,
            TokenType.QUERYSTRING,
            TokenType.URL,
            TokenType.STATIC,
            TokenType.AS,
            TokenType.BY,
        }
        return token_type in keyword_types

    # ========================================================================
    # Main parsing methods
    # ========================================================================

    def parse(self) -> ast_nodes.Document:
        """Parse the entire template into a Document."""
        children = []

        while not self.match(TokenType.EOF):
            child = self.parse_element()
            if child:
                children.append(child)

        return ast_nodes.Document(children=children)

    def parse_element(self) -> ast_nodes.ASTNode | None:
        """Parse a single element (HTML, template, text, etc.)."""
        token = self.current()

        # DOCTYPE declaration
        if token.type == TokenType.DOCTYPE:
            return self.parse_doctype()

        # HTML comment
        if token.type == TokenType.HTML_COMMENT:
            return self.parse_html_comment()

        # CDATA section
        if token.type == TokenType.CDATA:
            return self.parse_cdata()

        # HTML element
        if token.type == TokenType.HTML_OPEN_TAG:
            return self.parse_html_element()

        # Self-closing HTML element
        if token.type == TokenType.HTML_SELF_CLOSE:
            return self.parse_void_element()

        # Template variable
        if token.type == TokenType.TEMPLATE_VAR_START:
            return self.parse_variable()

        # Template tag
        if token.type == TokenType.TEMPLATE_TAG_START:
            return self.parse_template_tag()

        # Comment
        if token.type == TokenType.TEMPLATE_COMMENT_START:
            return self.parse_comment()

        # Text content
        if token.type == TokenType.TEXT:
            text = self.advance().value
            # Skip empty whitespace-only text nodes
            if text.strip():
                return ast_nodes.TextNode(content=text)
            # But keep them if they have content
            if text:
                return ast_nodes.TextNode(content=text)
            return None

        # Ignore closing tags here - they're handled by parse_html_element
        if token.type == TokenType.HTML_CLOSE_TAG:
            return None

        raise ParseError(
            f"Unexpected token {token.type.name} at line {token.line}, column {token.column}"
        )

    # ========================================================================
    # HTML parsing
    # ========================================================================

    def parse_html_element(self) -> ast_nodes.HTMLElement | ast_nodes.VoidElement:
        """Parse HTML elements with automatic void element detection.

        Delegates to HtmlParser for implementation.

        See HtmlParser.parse_html_element() for detailed documentation.
        """
        return self.html_parser.parse_html_element()

    def parse_void_element(self) -> ast_nodes.VoidElement:
        """Parse a self-closing/void element."""
        return self.html_parser.parse_void_element()
    def parse_attributes(self) -> list[ast_nodes.Attribute]:
        """Parse HTML element attributes with support for dynamic attribute names.

        Attributes can have:
        - Static names: class, id, data-value
        - Dynamic names: {{ attr_name }} (RDTL extension)
        - Values: Quoted strings or None for boolean attributes
        - Boolean attributes: disabled, checked, readonly (no value)

        Dynamic Attribute Names:
            RDTL extends HTML to allow computed attribute names using
            Django template variables:
            <div {{ dynamic_attr }}="value">
            <button {{ "disabled" if not active else "" }}>

            These are marked with is_dynamic_name=True in the AST.

        Boolean Attributes:
            HTML5 boolean attributes (disabled, checked, etc.) can appear
            without values:
            <input disabled> → Attribute('disabled', value=None)
            <input disabled="disabled"> → Attribute('disabled', value='disabled')

        Attribute Value Parsing:
            Values are always strings after lexing. The lexer handles:
            - Double-quoted: class="foo"
            - Single-quoted: class='foo'
            - Unquoted: class=foo (lexer limitation, not standard HTML)

        Returns:
            List of Attribute nodes with name, optional value, and dynamic flag.

        Examples:
            class="container" → [Attribute('class', 'container', is_dynamic_name=False)]
            disabled → [Attribute('disabled', None, is_dynamic_name=False)]
            {{ attr }}="val" → [Attribute('{{ attr }}', 'val', is_dynamic_name=True)]
        """
        return self.html_parser.parse_attributes()
    def parse_doctype(self) -> ast_nodes.DocType:
        """Parse a DOCTYPE declaration."""
        return self.html_parser.parse_doctype()
    def parse_html_comment(self) -> ast_nodes.HTMLComment:
        """Parse an HTML comment."""
        return self.html_parser.parse_html_comment()
    def parse_cdata(self) -> ast_nodes.CDATA:
        """Parse a CDATA section."""
        return self.html_parser.parse_cdata()
    # ========================================================================
    # Template variable parsing
    # ========================================================================

    def parse_variable(self) -> ast_nodes.Variable:
        """Parse {{ variable|filter }}."""
        self.expect(TokenType.TEMPLATE_VAR_START)

        # Parse expression
        expression = self.parse_expression()

        # Parse filters
        filters = []
        while self.match(TokenType.PIPE):
            self.advance()  # |
            filters.append(self.parse_filter())

        self.expect(TokenType.TEMPLATE_VAR_END)

        return ast_nodes.Variable(expression=expression, filters=filters)

    def parse_filter(self) -> ast_nodes.Filter:
        """Parse Django template filters with optional arguments.

        Delegates to ExpressionParser for implementation.

        See ExpressionParser.parse_filter() for detailed documentation.
        """
        return self.expression_parser.parse_filter()

    def parse_filter_arg(self) -> str | int | float:
        """Parse individual filter arguments.

        Delegates to ExpressionParser for implementation.

        See ExpressionParser.parse_filter_arg() for detailed documentation.
        """
        return self.expression_parser.parse_filter_arg()

    # ========================================================================
    # Expression parsing
    # ========================================================================

    def parse_expression(self) -> ast_nodes.Expression | ast_nodes.Literal:
        """Parse variable expressions with Django's dot-notation lookups or literal values.

        Delegates to ExpressionParser for implementation.

        See ExpressionParser.parse_expression() for detailed documentation.
        """
        return self.expression_parser.parse_expression()

    def parse_expression_with_filters(
        self,
    ) -> ast_nodes.Expression | ast_nodes.Literal | ast_nodes.FilteredExpression:
        """Parse an expression with optional filters.

        Delegates to ExpressionParser for implementation.
        """
        return self.expression_parser.parse_expression_with_filters()

    # ========================================================================
    # Template tag parsing
    # ========================================================================

    def parse_template_tag(self) -> ast_nodes.ASTNode:
        """Parse Django template tags and dispatch to specialized parsing methods.

        This method acts as a central dispatcher for all template tag types:
        - Block tags: if, for, block, with, comment, filter, etc.
        - Single tags: include, load, csrf_token, cycle, debug, etc.
        - Custom tags: Discovered in first pass and handled generically

        The parser uses a two-phase approach for custom block tags:
        1. First pass (validation): Discovers unknown block tags by scanning
           for {% tagname %}...{% endtagname %} patterns
        2. Second pass (parsing): Treats discovered tags as generic blocks

        This maintains context-free grammar properties while supporting
        custom Django template tags without explicit registration.

        Returns:
            Appropriate ASTNode subclass for the parsed tag.

        Raises:
            ParseError: If tag type is unknown or malformed.

        Examples:
            {% if condition %} → IfBlock
            {% for item in items %} → ForBlock
            {% mytag %}...{% endmytag %} → GenericBlockTag
            {% include "file.html" %} → IncludeTag
        """
        self.expect(TokenType.TEMPLATE_TAG_START)

        tag_type = self.current().type

        # If block
        if tag_type == TokenType.IF:
            return self.parse_if_block()

        # For block
        elif tag_type == TokenType.FOR:
            return self.parse_for_block()

        # Block tag
        elif tag_type == TokenType.BLOCK:
            return self.parse_block_tag()

        # With block
        elif tag_type == TokenType.WITH:
            return self.parse_with_block()

        # Include tag
        elif tag_type == TokenType.INCLUDE:
            return self.parse_include_tag()

        # Extends tag
        elif tag_type == TokenType.EXTENDS:
            return self.parse_extends_tag()

        # Load tag
        elif tag_type == TokenType.LOAD:
            return self.parse_load_tag()

        # URL tag
        elif tag_type == TokenType.URL:
            return self.parse_url_tag()

        # Static tag
        elif tag_type == TokenType.STATIC:
            return self.parse_static_tag()

        # CSRF token
        elif tag_type == TokenType.CSRF_TOKEN:
            return self.parse_csrf_token_tag()

        # Cycle tag
        elif tag_type == TokenType.CYCLE:
            return self.parse_cycle_tag()

        # Reset cycle tag
        elif tag_type == TokenType.RESETCYCLE:
            return self.parse_resetcycle_tag()

        # Debug tag
        elif tag_type == TokenType.DEBUG:
            return self.parse_debug_tag()

        # Lorem tag
        elif tag_type == TokenType.LOREM:
            return self.parse_lorem_tag()

        # Regroup tag
        elif tag_type == TokenType.REGROUP:
            return self.parse_regroup_tag()

        # Query string tag
        elif tag_type == TokenType.QUERYSTRING:
            return self.parse_querystring_tag()

        # Comment block
        elif tag_type == TokenType.COMMENT:
            return self.parse_comment_block()

        # Ifchanged block
        elif tag_type == TokenType.IFCHANGED:
            return self.parse_ifchanged_block()

        # Filter block
        elif tag_type == TokenType.FILTER:
            return self.parse_filter_block()

        # Spaceless block
        elif tag_type == TokenType.SPACELESS:
            return self.parse_spaceless_block()

        # Verbatim block
        elif tag_type == TokenType.VERBATIM:
            return self.parse_verbatim_block()

        # Autoescape block
        elif tag_type == TokenType.AUTOESCAPE:
            return self.parse_autoescape_block()

        # Generic single tag or custom block tag
        elif tag_type == TokenType.IDENTIFIER:
            tag_name = self.current().value.lower()

            # Check if this is a discovered custom block tag
            if tag_name in self.block_tags:
                return self.parse_generic_block_tag()
            else:
                return self.parse_single_tag()

        else:
            raise ParseError(
                f"Unknown template tag {self.current().value} at line {self.current().line}"
            )

    def parse_if_block(self) -> ast_nodes.IfBlock:
        """Parse Django if/elif/else conditional blocks.

        Syntax:
            {% if condition %}
                content
            {% elif condition2 %}
                content2
            {% else %}
                fallback
            {% endif %}

        Features:
            - Multiple elif branches supported
            - Optional else branch
            - Conditions support: comparisons, boolean ops, filters
            - Nested if blocks allowed

        Returns:
            IfBlock with if_condition, if_children, elif_branches list, else_children.

        Examples:
            {% if user %}...{% endif %}
            {% if age >= 18 %}adult{% else %}minor{% endif %}
            {% if role == "admin" %}...{% elif role == "mod" %}...{% else %}...{% endif %}
        """
        self.expect(TokenType.IF)

        # Parse if condition
        if_condition = self.parse_condition()
        self.expect(TokenType.TEMPLATE_TAG_END)

        # Parse if body
        if_children = self.parse_block_body(
            [TokenType.ELIF, TokenType.ELSE, TokenType.ENDIF]
        )

        # Parse elif branches
        elif_branches = []
        while (
            self.match(TokenType.TEMPLATE_TAG_START)
            and self.peek().type == TokenType.ELIF
        ):
            self.expect(TokenType.TEMPLATE_TAG_START)
            self.expect(TokenType.ELIF)

            elif_condition = self.parse_condition()
            self.expect(TokenType.TEMPLATE_TAG_END)

            elif_children = self.parse_block_body(
                [TokenType.ELIF, TokenType.ELSE, TokenType.ENDIF]
            )
            elif_branches.append((elif_condition, elif_children))

        # Parse else branch
        else_children = None
        if (
            self.match(TokenType.TEMPLATE_TAG_START)
            and self.peek().type == TokenType.ELSE
        ):
            self.expect(TokenType.TEMPLATE_TAG_START)
            self.expect(TokenType.ELSE)
            self.expect(TokenType.TEMPLATE_TAG_END)

            else_children = self.parse_block_body([TokenType.ENDIF])

        # Parse endif
        self.expect(TokenType.TEMPLATE_TAG_START)
        self.expect(TokenType.ENDIF)
        self.expect(TokenType.TEMPLATE_TAG_END)

        return ast_nodes.IfBlock(
            if_condition=if_condition,
            if_children=if_children,
            elif_branches=elif_branches,
            else_children=else_children,
        )

    def parse_for_block(self) -> ast_nodes.ForBlock:
        """Parse Django for loops with support for tuple unpacking and empty clause.

        Syntax:
            {% for var in iterable %}
                content
            {% empty %}
                fallback (optional)
            {% endfor %}

        Tuple Unpacking:
            Django supports unpacking iterables of tuples/lists:
            {% for key, value in items %} - Unpacks 2-element sequences
            {% for x, y, z in points %} - Unpacks 3-element sequences

        Empty Clause:
            The {% empty %} clause renders when the iterable is empty or None:
            {% for item in items %}
                {{ item }}
            {% empty %}
                No items found
            {% endfor %}

        Features:
            - Single or multiple loop variables (tuple unpacking)
            - Iterates over any iterable expression (lists, dicts, querysets)
            - Optional empty clause for zero-item collections
            - Nested for loops supported

        Returns:
            ForBlock with loop_vars list, iterable expression, children, and
            optional empty_children.

        Examples:
            {% for item in items %}{{ item }}{% endfor %}
            {% for key, value in dict.items %}{{ key }}: {{ value }}{% endfor %}
            {% for user in users %}...{% empty %}No users{% endfor %}
        """
        self.expect(TokenType.FOR)

        # Parse loop variables (can be tuple unpacking)
        loop_vars = []
        loop_vars.append(self.expect(TokenType.IDENTIFIER).value)

        # Check for comma-separated variables (tuple unpacking)
        while self.match(TokenType.COMMA):
            self.advance()  # ,
            loop_vars.append(self.expect(TokenType.IDENTIFIER).value)

        # Expect 'in'
        self.expect(TokenType.IN)

        # Parse iterable
        iterable = self.parse_expression()

        self.expect(TokenType.TEMPLATE_TAG_END)

        # Parse loop body
        children = self.parse_block_body([TokenType.EMPTY, TokenType.ENDFOR])

        # Parse empty clause
        empty_children = None
        if (
            self.match(TokenType.TEMPLATE_TAG_START)
            and self.peek().type == TokenType.EMPTY
        ):
            self.expect(TokenType.TEMPLATE_TAG_START)
            self.expect(TokenType.EMPTY)
            self.expect(TokenType.TEMPLATE_TAG_END)

            empty_children = self.parse_block_body([TokenType.ENDFOR])

        # Parse endfor
        self.expect(TokenType.TEMPLATE_TAG_START)
        self.expect(TokenType.ENDFOR)
        self.expect(TokenType.TEMPLATE_TAG_END)

        return ast_nodes.ForBlock(
            loop_vars=loop_vars,
            iterable=iterable,
            children=children,
            empty_children=empty_children,
        )

    def parse_block_tag(self) -> ast_nodes.BlockTag:
        """Parse Django block tags for template inheritance.

        Syntax:
            {% block name %}
                content
            {% endblock %}

            {% block name %}
                content
            {% endblock name %}

        Purpose:
            Block tags define sections in a template that child templates can
            override. They are the foundation of Django's template inheritance
            system, allowing:
            - Base templates to define structure with customizable sections
            - Child templates to override specific blocks while keeping structure
            - Multiple levels of inheritance (grandchild inherits from child)

        Block Names:
            Block names must be valid identifiers and should be descriptive:
            {% block title %} - Page title section
            {% block content %} - Main content area
            {% block sidebar %} - Sidebar section
            {% block extra_js %} - Additional JavaScript

        Optional Closing Name:
            Block names can optionally appear after {% endblock %} for clarity:
            {% block navigation %}...{% endblock navigation %}

            The parser validates that opening and closing names match if provided.

        Template Inheritance Pattern:
            Base template (base.html):
                <html>
                <head>{% block title %}Default Title{% endblock %}</head>
                <body>{% block content %}{% endblock %}</body>
                </html>

            Child template:
                {% extends "base.html" %}
                {% block title %}My Page{% endblock %}
                {% block content %}<p>Hello!</p>{% endblock %}

        Block Override Behavior:
            - Child blocks completely replace parent block content
            - {{ block.super }} can access parent block content (not yet implemented)
            - Multiple blocks with same name not allowed in single template

        Returns:
            BlockTag with name and children nodes.

        Raises:
            ParseError: If closing block name doesn't match opening name.

        Examples:
            {% block title %}My Site{% endblock %}
            {% block content %}Page content here{% endblock content %}
        """
        self.expect(TokenType.BLOCK)

        # Parse block name
        name_token = self.expect(TokenType.IDENTIFIER)
        name = name_token.value

        self.expect(TokenType.TEMPLATE_TAG_END)

        # Parse block body
        children = self.parse_block_body([TokenType.ENDBLOCK])

        # Parse endblock
        self.expect(TokenType.TEMPLATE_TAG_START)
        self.expect(TokenType.ENDBLOCK)

        # Optional: block name can appear after endblock
        if self.match(TokenType.IDENTIFIER):
            end_name = self.advance().value
            if end_name != name:
                raise ParseError(
                    f"Block name mismatch: {name} vs {end_name} at line {self.current().line}"
                )

        self.expect(TokenType.TEMPLATE_TAG_END)

        return ast_nodes.BlockTag(name=name, children=children)

    def parse_with_block(self) -> ast_nodes.WithBlock:
        """Parse Django with blocks for creating temporary variables with local scope.

        Syntax:
            {% with var=value %}
                content
            {% endwith %}

            {% with var1=value1 var2=value2 %}
                content
            {% endwith %}

        Purpose:
            The with block creates a new variable scope, allowing you to:
            - Cache expensive lookups in a local variable
            - Simplify complex expressions by naming them
            - Create temporary variables without polluting parent context

        Multiple Assignments:
            Django with blocks support multiple variable assignments in a single tag:
            {% with total=items|length price=product.price %}
                Total: {{ total }} items at ${{ price }}
            {% endwith %}

        Scoping Behavior:
            Variables created in a with block:
            - Are only accessible within the block
            - Shadow outer variables with the same name
            - Are automatically removed when the block ends
            - Don't affect the parent context

        Expression Support:
            Values can be any valid Django expression:
            - Variables: {% with user=request.user %}
            - Lookups: {% with name=user.profile.full_name %}
            - Filters: {% with upper_name=user.name|upper %}
            - Literals: {% with count=42 %}

        Returns:
            WithBlock containing assignments list and children nodes.
